add support for other locales

--- a/config.example.json
+++ b/config.example.json
@@ -1,6 +1,7 @@
 {
     "OpenTTD": "openttd",
     "Args": [],
+    "ChatPrefix": "[All] ",
     "Token": "",
     "ChannelID": "",
     "Prefix": "ttd!",
